--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <h1 class="title-text">Olá</h1>
                     <h4 class="title-subtitle">Bem vindo ao meu currículo.</h4>
                     <p>
+                        Lorem ipsum dolor sit amet,
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas enim est, tempor id rutrum
                         vitae, eleifend et metus. Morbi sed iaculis eros. Donec bibendum nibh id mi maximus, eu posuere
                         nisi facilisis.
