coloquei os links das minhas redes sociais

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                         </div>
                         <div class="icon-redes-sociais">
                             <div class="links-redes-sociais mt-2">
-                                <a href="#">
+                                <a href="https://www.facebook.com/thiago.raposo.39/" target="_blank">
                                     <i class="fab fa-facebook"></i>
                                 </a>
-                                <a href="#">
+                                <a href="https://twitter.com/thiagoraposo4" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#">
+                                <a href="https://www.linkedin.com/in/thiago-raposo-b2217512a/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="#">
+                                <a href="https://www.instagram.com/thiago_raposo_sls/" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                             </div>
@@ -101,16 +101,16 @@
             <div class="col-md-3 col-lg-3">
                 <h4>Siga</h4>
                 <div class="links-redes-sociais">
-                    <a href="#">
+                    <a href="https://www.facebook.com/thiago.raposo.39/" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://twitter.com/thiagoraposo4" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/thiago-raposo-b2217512a/" target="_blank">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://www.instagram.com/thiago_raposo_sls/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
