--- a/index.html
+++ b/index.html
@@ -25,19 +25,13 @@
                     <div class="card-body">
                         <h5 class="card-title text-center" id="nome-no-html"></h5>
                         <hr class="hr">
-                        <p class="text-center" id="cargo-no-html">                            
+                        <p class="text-center" id="cargo-no-html">
                         </p>
                         <div class="botoes-card">
-                            <button 
-                                onclick="ClickNoSobre()" 
-                                class="btn mr-1" 
-                                id="btn-sobre">
+                            <button onclick="ClickNoSobre()" class="btn mr-1" id="btn-sobre">
                                 Sobre
                             </button>
-                            <button 
-                                onclick="ClickNoProjetos()" 
-                                class="btn ml-1 btn-card" 
-                                id="btn-projetos">
+                            <button onclick="ClickNoProjetos()" class="btn ml-1 btn-card" id="btn-projetos">
                                 Projetos
                             </button>
                         </div>
@@ -65,13 +59,15 @@
                     <h1 class="title-text">Olá</h1>
                     <h4 class="title-subtitle">Bem vindo ao meu currículo.</h4>
                     <p>
-                        Lorem ipsum dolor sit amet,
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas enim est, tempor id rutrum
-                        vitae, eleifend et metus. Morbi sed iaculis eros. Donec bibendum nibh id mi maximus, eu posuere
-                        nisi facilisis.
+                        Sou formado em Arquitetura e Urbanismo pela Universidade do Estado de Santa Catarina (UDESC).
+                        O curso foi realizado na cidade histórica de Laguna/SC, famosa pela pesca com botos, belas prais
+                        e pelo carnaval de rua.
+
                     </p>
                     <p>
-                        Aenean a est ultrices, egestas nibh nec, laoreet magna. Fusce ut commodo arcu, ac mollis nisi. 
+                        Atualmente moro em Florianópolis/SC, estudo para concursos, e busco sempre aprender algo novo.
+                        Meus hobbies incluem, desenhar, práticar atividades físicas, ler e dançar, gosto de tudo que me movimenta
+                        seja meu corpo ou minha mente, se me desperta a curiosodade, também desperta minha vontade de explorar o novo.
                     </p>
                 </div>
 
@@ -81,7 +77,7 @@
                     <p>
                         <a target="_blank" href="https://www.growdev.com.br">
                             Site da Growdev - Este site foi desenvolvido em ReactJS.</a>
-                    </p>                   
+                    </p>
                 </div>
             </div>
         </div>
@@ -118,8 +114,9 @@
         </div>
         <div class="row text-center mb-2">
             <div class="col-md-12 col-lg-12">
-                <small>2021 growdev. All rights reserved <a href="http://www.growdev.com.br" target="_blank">Growdev</a>.</small>
-            </div>            
+                <small>2021 growdev. All rights reserved <a href="http://www.growdev.com.br"
+                        target="_blank">Growdev</a>.</small>
+            </div>
         </div>
     </footer>
 
